Fixed hamburger menu visibility issue.

--- a/main.css
+++ b/main.css
@@ -328,6 +328,10 @@ div.forsale-card p {
 
 /* Also from Brewer (2020). Tablet/mid-size breakpoint. */
 
+ul.topmenu li.dropdownIcon {
+  visibility: hidden;
+}
+
 @media screen and (max-width: 680px) {
   .main-banner-wrapper, .main-banners-wrapper-1, .main-banners-wrapper-2 {
     display: flex;
@@ -344,6 +348,7 @@ div.forsale-card p {
   }
 
   ul.topmenu li.dropdownIcon {
+    visibility: visible;
     display: block;
     float: right;
   }
